Updating both to have correct dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,26 @@
-name: CALORIE_QUEST
-description: A Flutter app for scanning and splitting bills.
+name: caloriscan
+description: A Flutter app for scanning meals, estimating calories and macronutrients, and tracking meal history.
 publish_to: 'none'
+
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^1.0.0
-  tflite: ^1.1.2
-  http: ^1.0.0
-  shared_preferences: ^2.0.15
-  fl_chart: ^1.0.0
+  cupertino_icons: ^1.0.8
+  fl_chart: ^0.68.0
+  image_picker: ^1.1.2
+  http: ^1.2.2
+  shared_preferences: ^2.3.0
+  device_info_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/mobilenet_v1_0.25_128.tflite
-    - assets/labels.txt
